--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,6 +5,8 @@ spring.datasource.url = jdbc:mysql://localhost:3306/wwvhoteldb
 spring.datasource.username = root
 spring.datasource.password = root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.data.rest.base-path=/api
+spring.data.rest.base-path=/room
 spring.jpa.database = MYSQL
 spring.jpa.show-sql = true
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
